static/styles/_layout.scss
:root {
    scroll-behavior: smooth;
    display: flex;
    flex-direction: column;
    scroll-padding-top: var(--layout-content-gap);
    overscroll-behavior-y: none;
    overscroll-behavior-x: none;
}

html {
    background: linear-gradient(
        to top right,
        color-mix(in srgb, var(--color-secondary) 20%, var(--color-primary) 80%) 0%,
        color-mix(in srgb, var(--color-secondary) 15%, var(--color-primary) 85%) 15%,
        color-mix(in srgb, var(--color-secondary) 10%, var(--color-primary) 90%) 30%,
        var(--color-primary) 50%,
        color-mix(in srgb, var(--color-secondary) 10%, var(--color-primary) 90%) 70%,
        color-mix(in srgb, var(--color-secondary) 15%, var(--color-primary) 85%) 85%,
        color-mix(in srgb, var(--color-secondary) 20%, var(--color-primary) 80%) 100%
    );
    background-color: var(--color-base);
}

html, body {
    max-width: 100vw;
    overflow-x: hidden;
}

section, header {
    & > :last-child {
        margin-bottom: 0;
    }
}

body {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    gap: var(--layout-content-gap);
    min-height: 100vh;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));

    &:has(.modal__wrapper:not(.hidden)) {
        overflow: hidden;
    }
}

main {
    width: 100%;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    gap: var(--layout-content-gap);
    padding-top: var(--layout-content-gap);
}

.particles-js-canvas-el {
    position: fixed;
    max-width: 100%;
    overflow: hidden;
    width: 100%;
    height: 100%;
    z-index: -1;
    top: 0;
    left: 0;
    transition: filter 1s;
}

header {
    margin-inline: auto;
    width: clamp(var(--layout-width-min), 70%, 1200px);

    .header__header {
        display: flex;  
        gap: 1rem;
        align-items: center;
        
        svg {
            width: var(--font-size-lg);
            height: var(--font-size-lg);
        }
    }
}

section {
    margin-inline: auto;
    width: clamp(var(--layout-width-min), 70%, 1200px);
}

img {
    border-radius: 1rem;
    object-fit: cover;
}

hr {
    width: clamp(var(--layout-width-min), 70%, 1200px);
    margin-inline: auto;
    border: 1px solid color-mix(in srgb, var(--color-text) 10%, transparent 90%);
}

.section--cols-2 {
    display: flex;
    flex-flow: row wrap;
    gap: 2rem;

    & > div {
        flex: 1;
        min-width: var(--layout-width-min);
    }

    img {
        max-height: 400px;
        object-fit: cover;
    }
}

.flex--reverse {
    flex-flow: row wrap-reverse;
}

.flex--center {
    justify-content: center;
}

.container {
    border: solid 1px var(--color-text);
    background-color: rgba(255, 255, 255, 0.03);
    backdrop-filter: blur(5px);
    padding: 1rem 2rem 1.5rem 2rem;
    border-radius: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;

    .section-divider {
        width: 100%;
    }

    p {
        margin: 0;
    }

    .container__header {
        display: flex;
        flex-direction: column;
        gap: .25rem;
    }
}

.container__wrapper {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    & > .container {
        width: clamp(var(--layout-width-min), 50%, 1200px);
    }
}

.messages--modals {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 99;
}

.messages {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 99;
}

